--- a/legendariosMinas/src/app/footer/footer.component.html
+++ b/legendariosMinas/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="container">
+  <p class="float-end"><a href="#">Voltar para o inicio</a></p>
+  <p>
+    &copy; 2022 Zagnoli Desenvolvimento de Sistemas LTDA. &middot;
+    <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+  </p>
+</footer>
