--- a/legendariosMinas/src/app/header/header.component.html
+++ b/legendariosMinas/src/app/header/header.component.html
@@ -1,1 +1,28 @@
-<p>header works!</p>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" style="color: coral" href="#"
+        >Legenarios Minas</a
+      >
+
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              style="color: coral"
+              aria-current="page"
+              href="/home"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ações Sociais</a>
+          </li>
+        </ul>
+
+        <button class="btn btn-warning">Cadastrar</button>
+      </div>
+    </div>
+  </nav>
+</header>
