--- a/legendariosMinas/src/app/home/home.component.html
+++ b/legendariosMinas/src/app/home/home.component.html
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" style="color: coral" href="#"
-            >Legenarios Minas</a
-          >
-
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  style="color: coral"
-                  aria-current="page"
-                  href="/home"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Ações Sociais</a>
-              </li>
-            </ul>
-
-            <button class="btn btn-warning">Cadastrar</button>
-          </div>
-        </div>
-      </nav>
-    </header>
+<app-header></app-header>
 
     <main>
       <div
@@ -259,15 +232,6 @@
 
       </div>
 
-
-      <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-end"><a href="#">Voltar para o inicio</a></p>
-        <p>
-          &copy; 2022 Zagnoli Desenvolvimento de Sistemas LTDA. &middot;
-          <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
-        </p>
-      </footer>
     </main>
 
   </body>
