--- a/legendariosMinas/src/app/home/home.component.html
+++ b/legendariosMinas/src/app/home/home.component.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-4">
             <img
-            src="../../assets/img/imganuncio1.jpg"
+            src="./assets/img/imganuncio1.jpg"
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
@@ -95,7 +95,7 @@
 
           <div class="col-lg-4">
             <img
-            src="../../assets/img/imganuncio1.jpg"
+            src="./assets/img/imganuncio1.jpg"
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
@@ -122,7 +122,7 @@
 
           <div class="col-lg-4">
             <img
-            src="../../assets/img/imganuncio1.jpg"
+            src="./assets/img/imganuncio1.jpg"
             class="bd-placeholder-img rounded-circle"
             width="140"
             height="140"
@@ -164,7 +164,7 @@
           </div>
           <div class="col-md-5">
             <img
-              src="../../assets/img/imganuncio1.jpg"
+              src="./assets/img/imganuncio1.jpg"
               class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
               width="500"
               eight="500"
@@ -190,7 +190,7 @@
           </div>
           <div class="col-md-5 order-md-1">
             <img
-              src="../../assets/img/imganuncio2"
+              src="./assets/img/imganuncio2"
               class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
               width="500"
               eight="500"
@@ -216,7 +216,7 @@
           </div>
           <div class="col-md-5">
             <img
-              src="../../assets/img/imganuncio3.jpg"
+              src="./assets/img/imganuncio3.jpg"
               class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
               width="500"
               eight="500"
