--- a/legendariosMinas/src/app/header/header.component.html
+++ b/legendariosMinas/src/app/header/header.component.html
@@ -1,8 +1,9 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
+      <img src="./assets/img/04.png" class="bi me-4" width="100" height="40">
       <a class="navbar-brand" style="color: coral" href="#"
-        >Legenarios Minas</a
+        >Legendarios - MG </a
       >
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
