--- a/legendariosMinas/src/app/home/home.component.html
+++ b/legendariosMinas/src/app/home/home.component.html
@@ -1,104 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-
-
     <main>
       <app-carrousel></app-carrousel>
 
       <div class="container marketing" style="margin-top: 40px">
         <div class="row">
-          <div class="col-lg-4">
-            <img
-              src="./assets/img/imganuncio1.jpg"
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            />
-
-            <h2 class="fw-normal">Leia Sobre</h2>
-            <p>Legendario conta sobre suas experiência</p>
-            <p>
-              <a
-                class="btn btn-secondary"
-                style="background-color: coral; color: black"
-                href="#"
-                >Saber Mais &raquo;</a
-              >
-            </p>
-          </div>
-
-          <div class="col-lg-4">
-            <img
-              src="./assets/img/imganuncio1.jpg"
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            />
-
-            <h2 class="fw-normal">Leia Sobre</h2>
-            <p>Novos Eventos a seguir.</p>
-            <p>
-              <a
-                class="btn btn-secondary"
-                style="background-color: coral; color: black"
-                href="#"
-                >Saber Mais &raquo;</a
-              >
-            </p>
-          </div>
-
-          <div class="col-lg-4">
-            <img
-              src="./assets/img/imganuncio1.jpg"
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder: 140x140"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            />
-
-            <h2 class="fw-normal">Leia Sobre</h2>
-            <p>Rec 998 está chegando.</p>
-            <p>
-              <a
-                class="btn btn-secondary"
-                style="background-color: coral; color: black"
-                href="#"
-                >Saber Mais &raquo;</a
-              >
-            </p>
-          </div>
+          <app-carrosel-anuncios></app-carrosel-anuncios>
         </div>
-
-        <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider" />
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">
-              Grande Testemunho
-              <span class="text-muted">Você tambem pode.</span>
+            <h2 class="featurette-heading fw-normal lh-1" style="color:chocolate ;">
+              AHU É MAIS QUE UM GRITO!
+              <span class="text-muted">UM NOVO NÍVEL DE AMOR, HONRA E UNIDADE.</span>
             </h2>
-            <p class="lead">Veja o video.</p>
+            <p class="lead">Tudo começou há 7 anos, Julho de 2015, com 109 homens nas montanhas inspirados e motivados a viver histórias que valem a pena contar. Mas há um porquê? prefeito, "Os homens estão em dívida", estamos em dívida com a sociedade, com as mulheres, com nossas famílias, nossos filhos e nossos países.
+
+              É daí que vem o movimento com o objetivo de trazer o herói caçador de volta a todas as famílias e restabelecer o papel do homem.</p>
           </div>
           <div class="col-md-5">
             <img
-              src="./assets/img/imganuncio1.jpg"
+              src="./assets/Estadistica.png"
               class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
               width="500"
               eight="500"
