--- a/legendariosMinas/src/app/carrosel-anuncios/carrosel-anuncios.component.html
+++ b/legendariosMinas/src/app/carrosel-anuncios/carrosel-anuncios.component.html
@@ -2,19 +2,19 @@
 <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
   <div class="carousel-inner">
     <div class="carousel-item active" style="align-items: center !important ;">
-      <img src="../../assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/BARRIENTOS1-1.jpeg"  width="410" height="330" alt="...">
     </div>
     <div class="carousel-item" style="align-items: center !important ;">
-      <img src="../../assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre2-1.jpg"  width="410" height="330" alt="...">
     </div>
     <div class="carousel-item" style="align-items: center !important ;">
-      <img src="../../assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
-      <img src="../../assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
+      <img src="./assets/img/imgcarrosel/hombre4 (2).jpg" width="410" height="330" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
