tela de dashboard

--- a/legendariosMinas/src/app/header/header.component.html
+++ b/legendariosMinas/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         </ul>
         <button class="btn btn-warning"
         style="margin-left: 1em ;"
-        routerLink="/login-adm"
+        routerLink="/home-adm"
         >ADM</button>
 
         <button class="btn btn-warning"
