--- a/front/legendariosMinas/src/app/cadastro-senderistas/cadastro-senderistas.component.html
+++ b/front/legendariosMinas/src/app/cadastro-senderistas/cadastro-senderistas.component.html
@@ -1,19 +1,119 @@
-<po-dynamic-form
-  #dynamicForm
-  p-auto-focus="name"
-  [p-fields]="fields"
-  [p-load]="onLoadFields.bind(this)"
-  [p-validate]="this.onChangeFields.bind(this)"
-  [p-validate-fields]="validateFields"
-  [p-value]="person"
->
-</po-dynamic-form>
+<body class="bg-light">
 
-<div class="po-row">
-  <po-button
-    class="po-md-3"
-    p-label="Save"
-    (p-click)="poNotification.success('Data saved successfully!'); dynamicForm.form.reset()"
-  >
-  </po-button>
-</div>
+  <div class="container">
+    <main>
+      <div class="py-5 text-center">
+        <h2>{{this.FormDadosLabels.Titulo}}</h2>
+        <p class="lead">{{ this.FormDadosLabels.DataEvento }}</p>
+        <p class="lead">{{ this.FormDadosLabels.DescricaoDoEvento }}</p>
+      </div>
+
+      <div class="row g-6">
+
+        <div class="col-md-12 col-lg-12">
+          <h4 class="mb-3">{{ this.FormDadosLabels.TituloDadosDoParticipante }}</h4>
+
+          <form class="needs-validation" novalidate>
+            <div class="row g-3">
+              <div class="col-sm-6">
+                <label for="firstName" class="form-label">{{ this.FormDadosLabels.firstName }}</label>
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <label for="lastName" class="form-label">{{ this.FormDadosLabels.lastName }}</label>
+                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+
+              <div class="col-12">
+                <label for="email" class="form-label"> {{ this.FormDadosLabels.Email }} <span class="text-muted">(Optional)</span></label>
+                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                <div class="invalid-feedback">
+                  Please enter a valid email address for shipping updates.
+                </div>
+              </div>
+
+              <div class="col-12">
+                <label for="address" class="form-label">{{ this.FormDadosLabels.Address}}</label>
+                <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                <div class="invalid-feedback">
+                  Please enter your shipping address.
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <label for="country" class="form-label">{{ this.FormDadosLabels.Country }}</label>
+                <select class="form-select" id="country" required>
+                  <option value="">{{ this.FormDadosLabels.Selecione }}</option>
+                  <option>Brasil</option>
+                  <option>United States</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please select a valid country.
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <label for="state" class="form-label">State</label>
+                <select class="form-select" id="state" required>
+                  <option value="">{{ this.FormDadosLabels.Selecione }}</option>
+                  <option>Minas Gerais</option>
+                  <option>California</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please provide a valid state.
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <label for="zip" class="form-label">Zip</label>
+                <input type="text" class="form-control" id="zip" placeholder="" required>
+                <div class="invalid-feedback">
+                  Zip code required.
+                </div>
+              </div>
+            </div>
+
+            <hr class="my-4">
+
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="same-address">
+              <label class="form-check-label" for="same-address"> Frequento Célula </label>
+            </div>
+
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="save-info">
+              <label class="form-check-label" for="save-info"> Sou Lider de Célula </label>
+            </div>
+
+            <hr class="my-4">
+
+            <div class="row gy-3">
+
+            </div>
+
+            <hr class="my-4">
+
+            <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+          </form>
+        </div>
+      </div>
+    </main>
+
+    <footer class="my-5 pt-5 text-muted text-center text-small">
+      <p class="mb-1">&copy; 2017–2022 Company Name</p>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+      </ul>
+    </footer>
+  </div>
+
+</body>
