meios de pagamento funcionais

--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
@@ -596,7 +596,13 @@ Belo Horizonte – MG, junho de 2021.
         </div>
       </div>
 
-      <app-pagamento-cadastro-senderista></app-pagamento-cadastro-senderista>
+      <div class="row">
+
+        <div id="containerDePagamento"></div>
+
+      </div>
+
+
 
     </main>
 
