--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
@@ -1,4 +1,5 @@
 <app-descricao-evento-cadastro-senderista #descricaoEvento class="container"></app-descricao-evento-cadastro-senderista>
+
 <div [hidden]="descricaoEvento.Cadastrovisivel" class="container">
   <form [formGroup]="myGroup">
 
@@ -605,13 +606,16 @@ Belo Horizonte – MG, junho de 2021.
 
   <div class="row">
 
-    <div class="col-md-12" id="containerDePagamento"></div>
+    <div id="containerDePagamento"></div>
+
+
 
   </div>
 
 </div>
 
 
+<app-pagamento-cadastro-senderista></app-pagamento-cadastro-senderista>
 
 <footer class="my-5 pt-5 text-muted text-center text-small">
   <p class="mb-1">&copy; 2022 Legendarios - Brasil</p>
