--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
@@ -10,8 +10,7 @@
         <div class="mp-checkout-bricks__selector-n5fsj4 svelte-14j1g8g"
           (click)="ExibeCartoes()">
 
-          <input class="mp-checkout-bricks__radio-YTyCuK svelte-14j1g8g"
-            (click)="acultaCartoes == true ? acultaCartoes = false : acultaCartoes = true" type="radio">
+          <input class="mp-checkout-bricks__radio-YTyCuK svelte-14j1g8g" type="radio">
 
           <div class="mp-checkout-bricks__selector-icon-2Eg8So svelte-14j1g8g">
 
