--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
@@ -1,6 +1,7 @@
+
 <app-descricao-evento-cadastro-senderista #descricaoEvento class="container"></app-descricao-evento-cadastro-senderista>
 
-<div [hidden]="descricaoEvento.Cadastrovisivel"  class="container">
+<div [hidden]="descricaoEvento.Cadastrovisivel" class="container">
 
 
   <div class="py-5 text-center">
@@ -14,7 +15,7 @@
     <div class="col-md-12 col-lg-12">
       <h4 class="mb-3"></h4>
 
-      <form [formGroup]="formGroup" class="needs-validation" >
+      <form [formGroup]="formGroup" class="needs-validation">
         <div class="row g-3">
 
           <div class="col-sm-6">
@@ -600,19 +601,15 @@ Belo Horizonte – MG, junho de 2021.
     </div>
   </div>
 
-
   <div class="row">
 
-    <div id="containerDePagamento"></div>
-
-
+    <div id="containerpagamento"></div>
+    <app-pagamento-cadastro-senderista #pagamentocomp></app-pagamento-cadastro-senderista> -->
 
   </div>
 
 </div>
 
-
-<app-pagamento-cadastro-senderista></app-pagamento-cadastro-senderista>
 
 <footer class="my-5 pt-5 text-muted text-center text-small">
   <p class="mb-1">&copy; 2022 Legendarios - Brasil</p>
