--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
@@ -1,174 +1,5 @@
-<form [formGroup]="formGroup" class="row">
+<div id="containerpagamento"></div>
 
-  <div class="col-md-12 classeDoContainerMercadoPago">
+<div id="statuscontainerpagamento"></div>
 
-    <div class="mp-checkout-bricks__payment-form-2YktQj svelte-1uuqtde">
-
-      <h1 class="svelte-1mym5f9 mp-checkout-bricks__padding-36kZW0">Meios de Pagamento</h1>
-
-      <div class="mp-checkout-bricks__payment-options-1mRS7a svelte-15wgdld">
-        <div class="mp-checkout-bricks__selector-n5fsj4 svelte-14j1g8g" (click)="ExibeCartoes()">
-
-          <input class="mp-checkout-bricks__radio-YTyCuK svelte-14j1g8g" type="radio">
-
-          <div class="mp-checkout-bricks__selector-icon-2Eg8So svelte-14j1g8g">
-
-            <svg data-testid="credit_card" width="24" height="18" viewBox="0 0 24 18" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-
-              <path d="M8.248 14.25H3.751V12.75H8.248V14.25Z"></path>
-              <path
-                d="M21 0.75H3C1.75736 0.75 0.75 1.75736 0.75 3V15C0.75 16.2426 1.75736 17.25 3 17.25H21C22.2426 17.25 23.25 16.2426 23.25 15V3C23.25 1.75736 22.2426 0.75 21 0.75ZM2.25 8.25V6.75H21.75V8.25H2.25ZM2.25 5.25H21.75V3C21.75 2.58579 21.4142 2.25 21 2.25H3C2.58579 2.25 2.25 2.58579 2.25 3V5.25ZM2.25 9.75H21.75V15C21.75 15.4142 21.4142 15.75 21 15.75H3C2.58579 15.75 2.25 15.4142 2.25 15V9.75Z"
-                fill="var(--text-secondary-color)">
-              </path>
-
-            </svg>
-
-          </div>
-
-          <div class="mp-checkout-bricks__selector-text-container-xbbKxO svelte-14j1g8g">
-            <div class="mp-checkout-bricks__selector-text-1YwHQc svelte-8kaysp">Cartão de crédito <span
-                class="svelte-8kaysp">Parcelas disponíveis</span></div>
-          </div>
-
-
-        </div>
-
-        <div id="acultaCartoes" class="container">
-
-          <div class="row">
-
-            <div class="col-md-12">
-              <label for="numcartao">Número do cartão</label>
-              <input id="numcartao" formControlName="numcartao" placeholder="1234 5678 9101 1213" class="form-control">
-            </div>
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-6">
-
-              <label for="mesvencimentocartao">Mês do vencimento</label>
-              <input id="mesvencimentocartao" formControlName="mesvencimentocartao" type="number" maxlength="2" placeholder="05" class="form-control">
-
-              <label for="anovencimentocartao">Dia do vencimento</label>
-              <input id="anovencimentocartao" formControlName="anovencimentocartao" type="number" maxlength="2"  placeholder="23" class="form-control">
-            </div>
-
-            <div class="col-md-6">
-              <label for="codsegurancacartao">Código de segurança</label>
-              <input id="codsegurancacartao" formControlName="codsegurancacartao" maxlength="3" type="number" placeholder="123" class="form-control">
-            </div>
-
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-12">
-              <label for="nometitularcartao">Nome do titular como aparece no cartão</label>
-              <input id="nometitularcartao" formControlName="nometitularcartao" placeholder="Augusto Zagnoli" class="form-control">
-            </div>
-
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-12">
-              <label for="doctitularcartao">Documento do titular do cartão</label>
-              <input id="doctitularcartao" formControlName="doctitularcartao" m placeholder="mm/aa" class="form-control">
-            </div>
-
-          </div>
-
-          <div class="row">
-
-            <label style="font-weight: 900;" class="form-label">Preencha seus dados</label>
-
-            <div class="col-md-12">
-              <label for="nomesenderista">Nome Completo</label>
-              <input id="nomesenderista" formControlName="nomesenderista" placeholder="mm/aa" class="form-control">
-            </div>
-
-            <div class="col-md-6">
-              <label for="emailsenderista">E-mail</label>
-              <input id="emailsenderista" formControlName="emailsenderista" placeholder="mm/aa" class="form-control">
-            </div>
-
-            <div class="col-md-6">
-              <label for="cpfsenderista">CPF</label>
-              <input id="cpfsenderista" formControlName="cpfsenderista" placeholder="mm/aa" class="form-control">
-            </div>
-
-            <div class="col-md-6">
-              <label for="datanascimentosenderista">Data de Nascimento</label>
-              <input id="email" type="date" placeholder="mm/aa" class="form-control">
-            </div>
-
-          </div>
-
-        </div>
-
-        <div style="margin-bottom: 10px;"></div>
-
-
-        <div (click)="ExibePix()" class="mp-checkout-bricks__selector-n5fsj4 svelte-14j1g8g">
-          <input class="mp-checkout-bricks__radio-YTyCuK svelte-14j1g8g" type="radio">
-          <div class="mp-checkout-bricks__selector-icon-2Eg8So svelte-14j1g8g backgroundWhite-U9RTMv"><svg
-              data-testid="bank_transfer" width="20" height="20" viewBox="0 0 20 20" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M15.7559 15.3002C14.9713 15.3002 14.2333 14.9947 13.6784 14.4401L10.6786 11.4404C10.468 11.2292 10.1009 11.2298 9.89038 11.4404L6.87965 14.4511C6.32477 15.0057 5.58675 15.3112 4.8021 15.3112H4.21094L8.01026 19.1103C9.19676 20.2968 11.1206 20.2968 12.3071 19.1103L16.1173 15.3002H15.7559Z"
-                fill="#4AB7A8"></path>
-              <path
-                d="M4.80193 4.68893C5.58658 4.68893 6.3246 4.99444 6.87948 5.54903L9.89021 8.5602C10.107 8.77712 10.4611 8.77793 10.6784 8.55995L13.6782 5.56001C14.2331 5.00542 14.9711 4.69991 15.7558 4.69991H16.1171L12.3071 0.889914C11.1204 -0.296638 9.19659 -0.296638 8.01009 0.889914L4.21094 4.68894L4.80193 4.68893Z"
-                fill="#4AB7A8"></path>
-              <path
-                d="M19.1101 7.85061L16.8077 5.54823C16.757 5.56853 16.7021 5.5812 16.6441 5.5812H15.5973C15.056 5.5812 14.5262 5.80072 14.1438 6.18342L11.1441 9.18309C10.8634 9.4638 10.4945 9.60425 10.126 9.60425C9.75714 9.60425 9.38854 9.4638 9.10791 9.18336L6.0969 6.17246C5.71446 5.78967 5.18466 5.57024 4.64343 5.57024H3.35621C3.3013 5.57024 3.25 5.5573 3.20156 5.53906L0.889942 7.85061C-0.296647 9.03716 -0.296647 10.9608 0.889942 12.1474L3.20147 14.4588C3.24999 14.4406 3.3013 14.4276 3.35621 14.4276H4.64343C5.18466 14.4276 5.71446 14.2082 6.0969 13.8255L9.10763 10.8149C9.65182 10.2712 10.6005 10.271 11.1441 10.8151L14.1438 13.8145C14.5262 14.1972 15.056 14.4168 15.5973 14.4168H16.6441C16.7021 14.4168 16.757 14.4294 16.8077 14.4497L19.1101 12.1473C20.2966 10.9608 20.2966 9.03715 19.1101 7.8506"
-                fill="#4AB7A8"></path>
-            </svg></div>
-          <div class="mp-checkout-bricks__selector-text-container-xbbKxO svelte-14j1g8g">
-            <div class="mp-checkout-bricks__selector-text-1YwHQc svelte-8kaysp">Pix <span
-                class="svelte-8kaysp">Aprovação na hora</span></div>
-          </div>
-        </div>
-
-        <div class="container">
-
-          <div id="acultaPix" class="row">
-
-
-            <div class="col-md-12">
-              <label for="email">E-mail</label>
-              <input id="email" class="form-control">
-            </div>
-
-          </div>
-
-        </div>
-        <div style="margin-bottom: 10px;"></div>
-
-
-      </div>
-
-      <div class="row-UZRYUT svelte-rurvvw">
-        <div  class="button-container-gZzvB_ svelte-rurvvw">
-          <button (click)="enviarPagamento()" type="submit" class="svelte-1a8kh4a"><svg role="img" viewBox="0 0 12 18" fill="none"
-              xmlns="http://www.w3.org/2000/svg" class="svelte-e3a2ae" width=" 16px" height=" 16px">
-              <path
-                d="M7.19464 11.4C7.19464 12.06 6.65962 12.595 5.99964 12.595C5.33966 12.595 4.80464 12.06 4.80464 11.4C4.80464 10.74 5.33966 10.205 5.99964 10.205C6.65962 10.205 7.19464 10.74 7.19464 11.4Z">
-              </path>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M11.9671 6.57023H10.1951V4.19546C10.1951 1.87837 8.31673 0 5.99964 0C3.68255 0 1.80418 1.87837 1.80418 4.19546V6.57023H0.0322266V14.99C0.0322266 16.6469 1.37537 17.99 3.03223 17.99H8.96706C10.6239 17.99 11.9671 16.6469 11.9671 14.99V6.57023ZM8.9951 4.19546V6.57023H3.00418V4.19546C3.00418 2.54111 4.3453 1.2 5.99964 1.2C7.65399 1.2 8.9951 2.54111 8.9951 4.19546ZM1.23223 14.99V7.77023H10.7671V14.99C10.7671 15.9841 9.96117 16.79 8.96706 16.79H3.03223C2.03811 16.79 1.23223 15.9841 1.23223 14.99Z">
-              </path>
-            </svg> <span class="svelte-1a8kh4a">Pagar</span>
-          </button>
-        </div>
-        <iframe
-          style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
-          aria-hidden="true" tabindex="-1" src="about:blank"></iframe>
-
-      </div>
-
-    </div>
-  </div>
-</form>
+<div id="acioneeventodeclickpagamento" (click)="enviarPagamento()"></div>
