--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.html
@@ -603,7 +603,7 @@ Belo Horizonte – MG, junho de 2021.
 
   <div class="row">
 
-    <app-pagamento-cadastro-senderista></app-pagamento-cadastro-senderista> -->
+    <app-pagamento-cadastro-senderista></app-pagamento-cadastro-senderista>
 
   </div>
 
