--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.scss
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/cadastro-senderistas.component.scss
@@ -15,3 +15,16 @@
 .demo-radio-button {
   margin: 5px;
 }
+
+
+.required {
+  select {
+    color: red;
+    border-color: red;
+  }
+
+  label {
+    color: red;
+    font-weight: bold;
+  }
+}
