--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/descricao-evento-cadastro-senderista/descricao-evento-cadastro-senderista.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/descricao-evento-cadastro-senderista/descricao-evento-cadastro-senderista.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="Textovisivel" class="container">
+<div style="margin-top: 23px;" class="container">
   <h1>Descrição do evento </h1>
   <h2> O que é Legendários?</h2>
 
@@ -141,8 +141,7 @@
 
   <hr class="my-4">
 
-  <button [hidden]="Textovisivel" (click)="AlterarVisibilidade()" class="w-100 btn btn-primary btn-lg"
-    type="submit">Realizar Inscrição</button>
+  <button routerLink="/cadastrar-senderista" class="w-100 btn btn-success btn-lg">Ir para Inscrição</button>
 
   <hr class="my-4">
 
