--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/pagamento-cadastro-senderista.component.html
@@ -1,4 +1,6 @@
-<div id="containerpagamento"></div>
+<div class="container">
+  <div class="row" id="containerpagamento"></div>
+</div>
+
 
 <div id="acioneeventodeclickpagamento" (click)="enviarPagamento()"></div>
-
