--- a/front/legendariosMinas/src/app/header/header.component.html
+++ b/front/legendariosMinas/src/app/header/header.component.html
@@ -4,7 +4,8 @@
       <img src="./assets/img/04.png" class="bi me-4" width="100" height="40">
       <a class="navbar-brand" style="color: coral" href="#">Legendarios - MG </a>
 
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="collapse navbar-collapse">
+
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
             <a class="nav-link active" style="color: coral" aria-current="page" routerLink="/home" (click)="homeclick()">Home</a>
@@ -13,6 +14,7 @@
             <a class="nav-link" href="#">Ações Sociais</a>
           </li>
         </ul>
+
         <button class="btn btn-warning"
         style="margin-left: 1em ;"
         routerLink="/home-adm"
@@ -20,7 +22,7 @@
 
         <button class="btn btn-warning"
         style="margin-left: 1em ;"
-        routerLink="cadastrar-sendenrista"
+        routerLink="/descricao-evento-senderista"
         >Cadastrar</button>
       </div>
     </div>
