--- a/front/legendariosMinas/src/app/pages/AreaAdm/home-adm/editar-legendario/editar-legendario.component.html
+++ b/front/legendariosMinas/src/app/pages/AreaAdm/home-adm/editar-legendario/editar-legendario.component.html
@@ -88,9 +88,11 @@
         </div>
 
         <div class="col-2">
-          <label for="address" class="form-label">Frequenta célula</label>
-          <input type="text" class="form-control" id="address" [formControl]="frequanta_celula">
-
+          <label for="civilstate" class="form-label">Frequenta célula</label>
+          <select class="form-select" id="civilstate" [formControl]="frequanta_celula" required>
+            <option [value]="true">Sim</option>
+            <option [value]="false">Não</option>
+          </select>
         </div>
 
         <div class="col-2">
@@ -106,9 +108,11 @@
         </div>
 
         <div class="col-2">
-          <label for="address" class="form-label">Ativo</label>
-          <input type="text" class="form-control" id="address" [formControl]="ativo">
-
+          <label for="civilstate" class="form-label">Ativo</label>
+          <select class="form-select" id="civilstate" [formControl]="ativo" required>
+            <option [value]="true">Sim</option>
+            <option [value]="false">Não</option>
+          </select>
         </div>
 
       </div>
@@ -118,7 +122,7 @@
       <div class="row g-3">
 
         <div class="col-12">
-          <button class="btn btn-success">Salvar</button>
+          <button class="btn btn-success" (click)="SalvarLegendario()">Salvar</button>
         </div>
 
         <div>
