--- a/front/legendariosMinas/src/app/pages/AreaAdm/login-adm/login-adm.component.html
+++ b/front/legendariosMinas/src/app/pages/AreaAdm/login-adm/login-adm.component.html
@@ -1,1 +1,4 @@
-<po-page-login [p-literals]="this.customLiterals"></po-page-login>
+<po-page-login
+[p-literals]="this.customLiterals"
+[p-authentication-type]="this.tipoAutenticacao"
+[p-authentication-url]="this.urlLogin"></po-page-login>
