--- a/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/status-pagamento/status-pagamento.component.html
+++ b/front/legendariosMinas/src/app/pages/cadastro-senderistas/pagamento-cadastro-senderista/status-pagamento/status-pagamento.component.html
@@ -1,1 +1,5 @@
-<div style="margin-top: 15px;" id="statuscontainerpagamento"></div>
+<div>
+  <div style="margin-top: 50px;"></div>
+  <div id="statuscontainerpagamento"></div>
+</div>
+
