--- a/front/legendariosMinas/src/app/pages/AreaAdm/login-adm/login-adm.component.html
+++ b/front/legendariosMinas/src/app/pages/AreaAdm/login-adm/login-adm.component.html
@@ -1,4 +1,33 @@
-<po-page-login
-[p-literals]="this.customLiterals"
-[p-authentication-type]="this.tipoAutenticacao"
-[p-authentication-url]="this.urlLogin"></po-page-login>
+<div class="text-center">
+
+  <div style="margin-top: 50px;"></div>
+
+  <main class="form-signin w-100 m-auto">
+    <form>
+
+      <img class="mb-4" src="../../assets/imgTop/logoTop.png" alt="" width="72" height="57">
+      <h1 class="h3 mb-3 fw-normal">Login</h1>
+
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email</label>
+      </div>
+
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Senha</label>
+      </div>
+
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Lembrar Senha
+        </label>
+      </div>
+
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+      <p class="mt-5 mb-3 text-muted">&copy; Legendarios - Minas - 2023 </p>
+
+    </form>
+  </main>
+
+</div>
